# 5.learning-python3

./: 1. variables.ipynb  2. functions.ipynb  3. control flow.ipynb  4. lists.ipynb  5. loops.ipynb  6. string.ipynb  7. modules.ipynb  8. dictionaries.ipynb  9. classes.ipynb  README.md  pyproject.toml  python-version.ipynb
