[tool.poetry]
name = "5.learning-python3"
version = "0.1.0"
description = "Workshop to learn the basics of programming with Python3 and Bitcoin"
authors = ["Federico Ulfo <federicoulfo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2"
jupyter = "^1.0"
ipykernel = "^5.1"
python-bitcoinrpc = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
